<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="biocom.projeto.projetobio.FamiliaAtividade"
    tools:showIn="@layout/activity_familia_atividade">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"

            android:layout_width="300dp"
            android:layout_height="700dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="biocom.projeto.projetobio.FamiliaAtividade"
            tools:showIn="@layout/activity_familia_atividade">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/manto_de_rei"
                android:id="@+id/textView5"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView9"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_popular"
                android:id="@+id/textView4"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                android:shadowColor="@color/abc_input_method_navigation_guard"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textView3"
                tools:ignore="PrivateResource" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:id="@+id/btnVoltar"
                android:layout_marginBottom="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esp_cie"
                android:id="@+id/textView6"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                android:shadowColor="@color/abc_input_method_navigation_guard"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                tools:ignore="PrivateResource" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/thunbergia_erecta"
                android:id="@+id/lblEspecie"
                android:textSize="20sp"

                android:layout_below="@+id/textView5"
                android:layout_alignParentEnd="true"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/familia"
                android:id="@+id/textView8"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                android:shadowColor="@color/abc_input_method_navigation_guard"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                tools:ignore="PrivateResource" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/acanthaceae"
                android:id="@+id/textView9"
                android:textSize="20sp"
                android:layout_below="@+id/lblEspecie"
                android:layout_toEndOf="@+id/textView4"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/folhas_opostas_ou_verticiladas_corola_zigomorfa_estilete_terminal_estames_n_o_inclusos_um_ou_dois_estigmas_sementes_n_o_aladas_ov_rio_uni_ou_bilocular_at_quatro_vulos_no_ov_rio"
                android:id="@+id/textView10"
                android:textSize="15sp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="86dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/magnoliopsida_flores_diclam_deas_simp_talas_ov_rio_s_pero_isost_mone_folhas_opostas_verticiladas_rosuladas_reduzidas_a_escamas_ou_ausentes"
                android:id="@+id/textView3"
                android:textSize="15sp"


                android:layout_below="@+id/textView8"
                android:layout_alignStart="@+id/textView10"
                android:layout_marginTop="34dp" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>

